Version 2.1.78


Version 2.1.77
    Added minimum quantity back to Repair config

    NOTES: I removed this last patch because I did not consider that server admins might be allowing users to repair items without crafting recipes (as of last patch mcMMO determines minimum quantity via counting ingredients in a recipe)
    If you do not define minimum quantity in the repair config, mcMMO will grab the minimum quantity automatically as I programmed it to do as of last patch, otherwise if it is defined, mcMMO will respect that and use that for calculations.
    The minimum quanitty should be set to the number of ingredients used to craft the recipe, for example 8 for diamond chestplate etc, you do not need to define this unless you are allowing players to repair custom items.

Version 2.1.76
    Advanced Salvage has been renamed to Scrap Collector
    Scrap Collector has 8 ranks, the first rank is unlocked at level 2 (Level 20 in RetroMode)
    You can not salvage without at least 1 rank in Scrap Collector now (formerly Advanced Salvage)
    Fixed a bug where Repair was repairing too much
    Fixed a bug where Arcane Salvage was used to determine how many materials a player could salvage from an item instead of Scrap Collector (formerly Advanced Salvage)
    Fixed a bug where messages about an item being too damage to salvage were being sent twice
    Removed the minimum quantity field from the repair config
    Removed the item data (metadata) field from repair config as its not used anymore
    Salvage will no longer return the max amount of materials possible, instead you are guaranteed one item and then some luck is involved on how many items are returned.
    Updated Chinese locale (thanks to the user named 89009332 from github)

    New locale strings
        Salvage.Skills.Lottery.Normal
        Salvage.Skills.Lottery.Perfect
        Salvage.Skills.Lottery.Untrained
        Salvage.SubSkill.ScrapCollector.Name
        Salvage.SubSkill.ScrapCollector.Description