@@ -1,5 +1,6 @@
 Version 2.1.78
-
+    Shovels no longer take more than 1 diamond to repair
+    Tools with the unbreaking enchantment no longer take extra damage from ability usage, they are still subject to the normal durability damage from breaking blocks though.
 
 Version 2.1.77
     Added minimum quantity back to Repair config
